fix(two-pane-carousel): align title and images across slides

--- a/components/two-pane-carousel/src/TwoPaneCarousel.module.scss
+++ b/components/two-pane-carousel/src/TwoPaneCarousel.module.scss
@@ -15,7 +15,8 @@
     width: 100%;
     height: auto;
     background-size: cover;
-    min-height: 400px;
+    background-position: center center;
+    max-height: 400px;
     margin-bottom: 24px;
 
     &::before {
@@ -65,7 +66,7 @@
     }
 
     .image {
-      min-height: none;
+      max-height: none;
       height: $pane-height;
       margin-bottom: 0;
 
